--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,7 +4,81 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+<div class="container bg-purple radius-20">
+    <div style="height: 200px;" class="d-flex  justify-content-center align-items-center ">
+        <h2 class="text-white">Blog</h2>
+    </div>
+</div>
+
+<div class="container mx-auto">
+    <div class="form-search bg-primary">
+        <div class="input-group mb-3 shadow">
+            <label class="input-group-text bg-white fs-3 border-none" for="search">
+                <i class='bx bx-search  '></i>
+            </label>
+            <input type="text" name="search" class="form-control border-none" placeholder="Search" style=" height: 60px;">
+        </div>
+
+    </div>
+</div>
+
+<div class="container">
+    <ul class="nav nav-pills justify-content-center">
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+        </li>
+    </ul>
+</div>
+
+<div class="container">
+    <div class="row my-5">
+        <div class="col-lg-6">
+            <div>
+                <img src="/img/random.jpg" class="img-fluid radius-20" />
+            </div>
+        </div>
+
+        <div class="col-lg-6">
+            <div>
+                <p class="fs-4">Category</p>
+                <h2>Title</h2>
+                <p>Description</p>
+            </div>
+        </div>
+
+    </div>
+    <div class="row">
+        <div class="col-lg-4 my-3">
+            <div class="card border-none">
+                <img src="/img/random.jpg" class="card-img-top radius-20" alt="...">
+                <div class="card-body border-none">
+                    <h6 class="text-blue">Category</h6>
+                    <h3 class="card-title">Card title</h3>
+                    <p class="card-text mb-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <div class="d-flex align-items-center mt-1">
+                        <div class="">
+                            <img src="/img/user.jpg" style="width: 50px;height: 50px; border-radius: 50%;" />
+                        </div>
+                        <div class="ms-3 mt-3">
+                            <h6 class="mb-0">full name</h6>
+                            <p>15-6-2023</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+</div>
+<div class="text-center mb-5">
+
+    <a href="#" class="btn btn-blue px-5 text-center">See more</a>
 </div>
