--- a/Pages/Blogs/Index.cshtml
+++ b/Pages/Blogs/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@page
-@model IndexModel
+@model BlogManagementSystem.Pages.Blogs.IndexModel
 @{
-    ViewData["Title"] = "Home page";
 }
+
+
 
 
 <div class="container bg-purple radius-20">
@@ -23,19 +24,10 @@
     </div>
 </div>
 
-@*<div class="container">
-    <ul class="nav nav-pills justify-content-center">
-        <li class="nav-item">
-            <a class="nav-link active" href="#">Active</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-        </li>
-    </ul>
-</div>*@
+
+<div class="d-flex justify-content-end mb-3">
+    <a class="btn btn-dark" asp-page="Add" asp-route-id="0" >Add</a>
+</div>
 
 <div class="container">
     <div class="row">
@@ -69,8 +61,4 @@
     </div>
 
 
-</div>
-<div class="text-center mb-5">
-
-    <a href="#" class="btn btn-blue px-5 text-center">See more</a>
 </div>
