--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -44,6 +44,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
                     <li class="nav-item">
+                        <a class="btn btn-primary me-3" asp-page="/blogs/Index">Blogs</a>
+                    </li>
+                    
+                    <li class="nav-item">
                         <a class="btn btn-primary me-3" href="#">Sign in</a>
                     </li>
                     <li class="nav-item">
