--- a/Pages/Blogs/Index.cshtml
+++ b/Pages/Blogs/Index.cshtml
@@ -37,11 +37,11 @@
             {
                 <div class="col-lg-4 my-3">
                     <div class="card border-none">
-                        <img src="/img/random.jpg" class="card-img-top radius-20" alt="...">
+                        <img src="/img/@item.imagePath" class="card-img-top radius-20" alt="...">
                         <div class="card-body border-none">
                             <h6 class="text-blue">@item.Category</h6>
                             <h3 class="card-title">@item.title</h3>
-                            <p class="card-text mb-0">@item.content!.Take(50)</p>
+                            <p class="card-text mb-0">@item.content!.Substring(0,5)</p>
                             <div class="d-flex align-items-center mt-1">
                                 <div class="">
                                     <img src="/img/user.jpg" style="width: 50px;height: 50px; border-radius: 50%;" />
@@ -51,6 +51,10 @@
                                     <p>15-6-2023</p>
                                 </div>
                             </div>
+                            <a asp-page="Add" asp-route-Id="@item.Id" class="btn btn-primary">Edit</a>
+                            <form method="post" asp-route-id="@item.Id" >
+                                <button type="submit" class="btn btn-primary" >Delete</button>
+                            </form>
                         </div>
                     </div>
                 </div>
