--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -72,5 +72,5 @@
 </div>
 <div class="text-center mb-5">
 
-    <a href="#" class="btn btn-blue px-5 text-center">See more</a>
+    <a asp-page="/Blogs/Index" class="btn btn-blue px-5 text-center">See more</a>
 </div>
