--- a/Pages/Portal/Signup.cshtml
+++ b/Pages/Portal/Signup.cshtml
@@ -1,4 +1,76 @@
 ﻿@page
 @model BlogManagementSystem.Pages.Portal.SignupModel
 @{
+
+}
+<div class="container">
+    <div class="row px-5  ">
+        <div class="col-10 mx-auto shadow radius-20 px-5 ">
+            <form method="post">
+                <div class="row py-5 flex-wrap">
+                    <h3 class="text-blue text-center mb-3">
+                        New Account
+                    </h3>
+
+                    <div class="col-lg-6">
+                        <div class="mb-2">
+                            <label class="form-label" asp-for="signupViewModel.FirstName"></label>
+                            <input class="form-control" asp-for="signupViewModel.FirstName" />
+                            <span asp-validation-for="signupViewModel.FirstName" class="text-validation"></span>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6">
+                        <div class="mb-2">
+                            <label class="form-label" asp-for="signupViewModel.LastName"></label>
+                            <input class="form-control" asp-for="signupViewModel.LastName" />
+                            <span asp-validation-for="signupViewModel.LastName" class="text-validation"></span>
+                        </div>
+                    </div>
+
+
+                    <div class="col-lg-12">
+                        <div class="mb-2">
+                            <label class="form-label" asp-for="signupViewModel.Email"></label>
+                            <input class="form-control" asp-for="signupViewModel.Email" />
+                            <span asp-validation-for="signupViewModel.Email" class="text-validation"></span>
+                        </div>
+                    </div>
+
+
+
+                    <div class="col-lg-12">
+                        <div class="mb-2">
+                            <label class="form-label" asp-for="signupViewModel.Password"></label>
+                            <input class="form-control" asp-for="signupViewModel.Password" />
+                            <span asp-validation-for="signupViewModel.Password" class="text-validation"></span>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-12">
+                        <div class="mb-2">
+                            <label class="form-label" asp-for="signupViewModel.ConfirmPassword"></label>
+                            <input class="form-control" asp-for="signupViewModel.ConfirmPassword" />
+                            <span asp-validation-for="signupViewModel.ConfirmPassword" class="text-validation"></span>
+                        </div>
+                    </div>
+
+                    <div class="text-center mt-3">
+                        <button type="submit" class="btn btn-primary" >Sign up</button>
+                    </div>
+
+                </div>
+
+            </form>
+
+        </div>
+    </div>
+</div>
+
+@section Scripts{
+
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial.cshtml");
+    }
+
 }
