--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -48,10 +48,10 @@
                     </li>
                     
                     <li class="nav-item">
-                        <a class="btn btn-primary me-3" href="#">Sign in</a>
+                        <a class="btn btn-primary me-3" asp-page="/Portal/Signin" >Sign in</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-purple" href="#">Sign up</a>
+                        <a class="btn btn-purple" asp-page="/Portal/Signup" >Sign up</a>
                     </li>
                 </ul>
             </div>
