--- a/Pages/Portal/Signin.cshtml
+++ b/Pages/Portal/Signin.cshtml
@@ -2,3 +2,43 @@
 @model BlogManagementSystem.Pages.Portal.SigninModel
 @{
 }
+
+<div class="container">
+    <form method="post">
+        <div class="row py-5 flex-wrap">
+            <h3 class="text-blue text-center mb-3">
+                Sign in
+            </h3>
+
+
+            <div class="col-lg-12">
+                <div class="mb-2">
+                    <label class="form-label" asp-for="signinViewModel.Email"></label>
+                    <input class="form-control" asp-for="signinViewModel.Email" />
+                    <span asp-validation-for="signinViewModel.Email" class="text-validation"></span>
+                </div>
+            </div>
+
+            <div class="col-lg-12">
+                <div class="mb-2">
+                    <label class="form-label" asp-for="signinViewModel.Password"></label>
+                    <input class="form-control" asp-for="signinViewModel.Password" />
+                    <span asp-validation-for="signinViewModel.Password" class="text-validation"></span>
+                </div>
+            </div>
+            <div class="text-center mt-3">
+                <button type="submit" class="btn btn-primary">Sign up</button>
+            </div>
+
+        </div>
+
+    </form>
+</div>
+
+@section Scripts{
+
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial.cshtml");
+    }
+
+}
